--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Metadados e link para o arquivo CSS -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio profissional de Mariana de Fátima Moraes de Oliveira, especialista em Administração e Gestão de Projetos com foco em Gestão de Projetos e Melhoria de Processos.">
@@ -10,8 +11,10 @@
 <body>
 
 <header class="site-header">
+    <!-- Navegação -->
     <nav>
         <ul>
+            <li><a href="#sobre">Sobre mim</a></li>
             <li><a href="#habilidades">Habilidades e Competências</a></li>
             <li><a href="#experiencia">Experiência Profissional</a></li>
             <li><a href="#formacao">Formação Acadêmica</a></li>
@@ -20,29 +23,32 @@
 </header>
 
 <main>
+    <!-- Seção Sobre Mim -->
     <section class="container principal" id="sobre">
         <h1 class="principal-name">Mariana de Fátima Moraes de Oliveira</h1>
         <p>Administração e Gestão de Projetos | Foco em Gestão de Projetos e Melhoria de Processos | Proficiência em Power BI e Metodologias Ágeis</p>
     </section>
     
-<section class="about-me">
-    <div class="perfil-container">
-        <img src="img/Foto profissional .png" alt="Foto de perfil profissional" class="foto-perfil">
-        <h3 class="title-text-about-me">Sobre mim</h3>
-        <p class="text-about-me">
-            Estudante de Administração na Universidade Federal de Goiás, minha carreira é movida pela paixão por Gestão de Projetos, Tecnologia e Inovação. Com experiência diversificada em vendas, qualidade e experiência do cliente, destaco-me em implementar soluções tecnológicas e inovadoras. 
-            Na Brava Consultoria JR, desenvolvi habilidades na gestão de indicadores e otimização de processos, preparando-me para desafios complexos em ambientes tecnológicos. Atualmente, como Gerente de Relacionamento no Nexa Goiás, aplico minhas competências em administração para liderar projetos inovadores, impulsionando o crescimento e a eficiência dos negócios.
-        </p>
-    </div>
-</section>
+    <!-- Seção Sobre Mim Detalhada -->
+    <section class="about-me">
+        <div class="perfil-container">
+            <img class="foto-perfil" src="img/Foto profissional .png" alt="Foto profissional de Mariana de Fátima Moraes de Oliveira">
+            <h3 class="title-text-about-me">Sobre mim</h3>
+            <p class="text-about-me">
+                Estudante de Administração na Universidade Federal de Goiás, minha carreira é movida pela paixão por Gestão de Projetos, Tecnologia e Inovação. Com experiência diversificada em vendas, qualidade e experiência do cliente, destaco-me em implementar soluções tecnológicas e inovadoras. Na Brava Consultoria JR, desenvolvi habilidades na gestão de indicadores e otimização de processos, preparando-me para desafios complexos em ambientes tecnológicos. Atualmente, como Gerente de Relacionamento no Nexa Goiás, aplico minhas competências em administração para liderar projetos inovadores, impulsionando o crescimento e a eficiência dos negócios.
+            </p>
+        </div>
+    </section>
 
-
+    <!-- TODO: Adicionar outras seções na página: Habilidades, experiência e formação-->
 
 </main>
 
 <footer>
+    <!-- Rodapé com direitos autorais e contato -->
     <p>© 2024 Mariana de Fátima Moraes de Oliveira. Todos os direitos reservados.</p>
-    <p>Contato: <a href="mailto:marianadefatimamoraes@gmail.com">marianadefatimamoraes@gmail.com</a></p>
+    <p>Contato: <a href="mailto:marianadefatimamoraes@gmail.com" aria-label="Entrar em contato com Mariana">marianadefatimamoraes@gmail.com</a></p>
+    <!-- Futuramente: Adicionar formulário de contato e redes sociais-->
 </footer>
 
 </body>
